--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 "fixed": "false",
                 "vertical": "top",
                 "horizontal": "left",
-                "key": "自己注册获取key"
+                "key": "782f2e580ace4a91bab6390d7d726f04"
             }
         }
     </script>
