--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/listener-He/Home/images/apple-touch-icon.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/listener-He/Home/favicon.ico">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/listener-He/Home/js/bj.js">
+    <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/bj.js"></script>
     <!--引入SweetAlert
     <script src="https://fastly.jsdelivr.net/npm/sweetalert@2.1.2/dist/sweetalert.min.js"></script>-->
     <script src="https://fastly.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
