更改样式 与 元素

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="panel-main__content">
                 <div class="ih-item circle effect right_to_left">
                     <a class="blog-button">
-                        <div class="img"><img src="https://q1.qlogo.cn/g?b=qq&nk=1151581339&s=100" alt="img"
+                        <div class="img"><img src="https://cdn.jsdelivr.net/gh/listener-He/images@default/202309111525908.jpeg" alt="img"
                                               class="js-avatar iUp profilepic header-logo">
                         </div>
                         <div class="info iUp">
@@ -95,9 +95,9 @@
                 <h1 class="panel-cover__title panel-title iUp">
                     <br/>Honesty
                 </h1>
-                <p class="panel-cover__subtitle panel-subtitle iUp">be your true self</p>
-                <canvas class="navigation-wrapper iUp" id="canvas" style="width:50%;padding-top:0px;" width="920"
-                        height="350"></canvas>
+                <p class="panel-cover__subtitle panel-subtitle iUp">众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。</p>
+<!--                <canvas class="navigation-wrapper iUp" id="canvas" style="width:50%;padding-top:0px;" width="920"-->
+<!--                        height="350"></canvas>-->
                 <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/clock.js"></script>
                 <hr class="iUp"/>
                 <!--一言无法显示时的文字-->
@@ -110,20 +110,16 @@
                         <nav class="cover-navigation cover-navigation--primary">
                             <ul class="navigation">
                                 <li class="navigation__item">
-                                    <a href="https://blog.hehouhui.cn/"
-                                       style="--clr:#1e9bff"><span>博客</span><i></i></a>
+                                    <a href="https://blog.hehouhui.cn/"><span>博客</span><i></i></a>
                                 </li>
                                 <li class="navigation__item">
-                                    <a href="https://alist.hehouhui.cn/"
-                                       style="--clr:#f85d5d"><span>网盘</span><i></i></a>
+                                    <a href="https://alist.hehouhui.cn/"><span>网盘</span><i></i></a>
                                 </li>
                                 <li class="navigation__item">
-                                    <a href="https://nav.hehouhui.cn/"
-                                       style="--clr:#ff1867"><span>导航</span><i></i></a>
+                                    <a href="https://nav.hehouhui.cn/"><span>导航</span><i></i></a>
                                 </li>
                                 <li class="navigation__item">
-                                    <a href="https://bz.lqbby.com:1443/"
-                                       style="--clr:#eb2feb"><span>壁纸</span><i></i></a>
+                                    <a href="https://bing.wdbyte.com/"><span>壁纸</span><i></i></a>
                                 </li>
                             </ul>
                         </nav>
@@ -198,41 +194,18 @@
 <!--黑暗主题-->
 
 
-<!--izitoast弹窗设置
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/fetch.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/main.js"></script>
+<script async src="https://analyse.hehouhui.cn/tracker.js" data-ackee-server="https://analyse.hehouhui.cn" data-ackee-domain-id="7887135f-a413-46e2-a98c-52d4f18d9973"></script>
 <script>
-    iziToast.settings({
-        timeout: 4000,
-        icon: 'Fontawesome',
-        closeOnEscape: 'true',
-        position: 'topRight',
-        transitionOut: 'fadeOutRight',
-        displayMode: '2',
-        layout: '2',
-        transitionIn: 'bounceInLeft',
-    });
-<script>
-
-    function update() {
-        iziToast.info({
-            icon: 'fad fa-times-octagon',
-            backgroundColor: '#efefef',
-            title: '站点暂时关闭',
-            message: '只是出现了一点小问题 ~'
-        });
-    }
-    -->
-<script>
-        // 百度站点统计
-    var _hmt = _hmt || [];
-    (function () {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?ae2a009a75b13c21d5121ee51375ea4e";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
+    // 百度站点统计
+var _hmt = _hmt || [];
+(function () {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?ae2a009a75b13c21d5121ee51375ea4e";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+})();
 </script>
-<script type="text/javascript" src="./js/jquery.min.js"></script>
-<script type="text/javascript" src="./js/fetch.min.js"></script>
-<script type="text/javascript" src="./js/main.js"></script>
-
 </body>
