--- a/index.html
+++ b/index.html
@@ -93,15 +93,16 @@
                     </a>
                 </div>
                 <h1 class="panel-cover__title panel-title iUp">
-                    <br/>Honesty
+<!--                    <br/>Honesty-->
                 </h1>
-                <p class="panel-cover__subtitle panel-subtitle iUp">众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。</p>
+<!--                <p class="panel-cover__subtitle panel-subtitle iUp">众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。</p>-->
+                <p class="panel-cover__subtitle panel-subtitle iUp"></p>
 <!--                <canvas class="navigation-wrapper iUp" id="canvas" style="width:50%;padding-top:0px;" width="920"-->
 <!--                        height="350"></canvas>-->
                 <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/clock.js"></script>
                 <hr class="iUp"/>
                 <!--一言无法显示时的文字-->
-                <p id="description" class="panel-cover__description iUp">人生天地之间，若白驹之过隙，忽然而已。
+                <p id="description" style="margin-top: 10%" class="panel-cover__description iUp">人生天地之间，若白驹之过隙，忽然而已。
                     <br/>
                     <strong>-「Honesty」</strong>
                 </p>
@@ -185,11 +186,19 @@
         <div class="panel-cover--overlay cover-slate"></div>
     </div>
     <div class="remark iUp">
+        <p class="power">ICP
+            <a class="icp" href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">湘ICP备20014902号</a>
+        </p>
         <p class="power">Copyright © 2018
             <script>document.write(' - ' + (new Date()).getFullYear())</script>
             Honesty
         </p>
+        <p class="power">Powered By
+            <a href="https://github.com/features/actions" target="_blank"> GitHub Actions </a> And
+            <a href="https://hitokoto.cn/" target="_blank"> Hitokoto </a>
+        </p>
     </div>
+
 </header>
 <!--黑暗主题-->
 
