--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="panel-cover--overlay cover-slate"></div>
     </div>
     <div class="remark iUp">
-        <p class="power">ICP
+        <p class="power">
             <a class="icp" href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">湘ICP备20014902号</a>
         </p>
         <p class="power">Copyright © 2018
