移除过时依赖

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
             }
         }
     </script>
-    <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
 
     <div class="panel-main">
         <div class="panel-main__inner panel-inverted">
@@ -99,7 +98,7 @@
                 <p class="panel-cover__subtitle panel-subtitle iUp"></p>
 <!--                <canvas class="navigation-wrapper iUp" id="canvas" style="width:50%;padding-top:0px;" width="920"-->
 <!--                        height="350"></canvas>-->
-                <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/clock.js"></script>
+<!--                <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/clock.js"></script>-->
                 <hr class="iUp"/>
                 <!--一言无法显示时的文字-->
                 <p id="description" style="margin-top: 10%" class="panel-cover__description iUp">人生天地之间，若白驹之过隙，忽然而已。
