--- a/index-2.html
+++ b/index-2.html
@@ -121,7 +121,7 @@
             </p>
         </div>
     </header>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/assets/js/main.js"></script>
+    <script type="text/javascript" src="./assets/js/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/assets/json/images.json?cb=getBingImages"></script>
     <script async src="https://analyse.hehouhui.cn/tracker.js" data-ackee-server="https://analyse.hehouhui.cn" data-ackee-domain-id="7887135f-a413-46e2-a98c-52d4f18d9973"></script>
     <script>
