--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Honesty的主页</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/listener-He/Home/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="https://blog-file.hehouhui.cn/bj/logo.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/listener-He/Home/favicon.ico">
     <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/bj.js"></script>
     <!--引入SweetAlert
@@ -43,7 +43,7 @@
     <i class="social iconfont icon-ngleup btn-mobile-close__icon hidden"></i>
 </span>-->
 <header id="panel" class="panel-cover"
-        style="background: url(https://cdn.jsdelivr.net/gh/listener-He/Home/images/bj/1.jpg) center center / cover no-repeat rgb(102, 102, 102);">
+        style="background: url(https://blog-file.hehouhui.cn/bj/1.jpg) center center / cover no-repeat rgb(102, 102, 102);">
     <!--星空背景-->
     <div id="stars"></div>
     <div id="stars2"></div>
@@ -215,5 +215,15 @@ var _hmt = _hmt || [];
     var s = document.getElementsByTagName("script")[0];
     s.parentNode.insertBefore(hm, s);
 })();
+</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DYWDEVKDP0"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DYWDEVKDP0');
 </script>
 </body>
