--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://blog-file.hehouhui.cn/bj/logo.png">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/listener-He/Home/favicon.ico">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/listener-He/Home/favicon.ico?version=1">
     <script src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/bj.js"></script>
     <!--引入SweetAlert
     <script src="https://fastly.jsdelivr.net/npm/sweetalert@2.1.2/dist/sweetalert.min.js"></script>-->
