--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <nav class="cover-navigation cover-navigation--primary">
                             <ul class="navigation">
                                 <li class="navigation__item">
-                                    <a href="https://about.hehouhui.cn/"><span>关于我</span><i></i></a>
+                                    <a href="https://about.hehouhui.cn/"><span>关于</span><i></i></a>
                                 </li>
                                 <li class="navigation__item">
                                     <a href="https://blog.hehouhui.cn/"><span>博客</span><i></i></a>
