--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Honesty的主页,HeHouHui的主页,HeHui的主页,明厚的主页">
     <meta name="keywords" content="Honesty,HeHouHui,HeHui,明厚">
-    <meta name="author" content="Honesty">
+    <meta name="author" content="HeHouHui">
     <title>Honesty的主页</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/listener-He/Home/css/iconfont.css">
@@ -21,6 +21,7 @@
     <!--引入SweetAlert
     <script src="https://fastly.jsdelivr.net/npm/sweetalert@2.1.2/dist/sweetalert.min.js"></script>-->
     <script src="https://fastly.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
+
     <!--引入izitoast-->
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css">
     <script type="text/javascript"
@@ -200,10 +201,8 @@
             <a href="https://hitokoto.cn/" target="_blank"> Hitokoto </a>
         </p>
     </div>
-
 </header>
 <!--黑暗主题-->
-
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/listener-He/Home/js/fetch.min.js"></script>
@@ -223,11 +222,12 @@ var _hmt = _hmt || [];
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DYWDEVKDP0"></script>
-<script>
+<script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-DYWDEVKDP0');
 </script>
+
 </body>
