--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- 基础信息 -->
-    <html lang="zh-cmn-Hans">
+    <meta lang="zh-cmn-Hans">
     <meta charset="utf-8">
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -39,12 +39,13 @@
 </head>
 
 <body oncontextmenu=self.event.returnValue=false onselectstart="return false">
-<!--<span class="mobile btn-mobile-menu">
-    <i class="social iconfont icon-list btn-mobile-menu__icon"></i>
-    <i class="social iconfont icon-ngleup btn-mobile-close__icon hidden"></i>
-</span>-->
+<!--&lt;!&ndash;<span class="mobile btn-mobile-menu">-->
+<!--    <i class="social iconfont icon-list btn-mobile-menu__icon"></i>-->
+<!--    <i class="social iconfont icon-ngleup btn-mobile-close__icon hidden"></i>-->
+<!--</span>&ndash;&gt;-->
+<!-- style="background: url(https://blog-file.hehouhui.cn/bj/1.jpg) center center / cover no-repeat rgb(102, 102, 102);" -->
 <header id="panel" class="panel-cover"
-        style="background: url(https://blog-file.hehouhui.cn/bj/1.jpg) center center / cover no-repeat rgb(102, 102, 102);">
+        >
     <!--星空背景-->
     <div id="stars"></div>
     <div id="stars2"></div>
@@ -231,3 +232,4 @@ var _hmt = _hmt || [];
 </script>
 
 </body>
+</html>
